--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -277,8 +277,8 @@ for their convenience.
 
 [width="100%",cols="5%,95%", grid=none]
 |===
-ifdef::env-github[| :white_check_mark: a| The list of liked and disliked categories, tags and locations will be shown.]
-ifndef::env-github[a| icon:check[role="green", size="2x"] a| The list of liked and disliked categories, tags and locations will be shown.]
+ifdef::env-github[| :white_check_mark: a| The list of liked or disliked categories, tags and locations will be shown.]
+ifndef::env-github[a| icon:check[role="green", size="2x"] a| The list of liked or disliked categories, tags and locations will be shown.]
 |===
 
 *To add likes*:
@@ -297,7 +297,7 @@ ifndef::env-github[a| icon:check[role="green", size="2x"] a| You will see a succ
 *To add dislikes*:
 
 ****
-*Format*: `dislike c/Chinese c/Western t/Healthy l/Univeristy Town` +
+*Format*: `dislike c/CATEGORY t/TAG l/LOCATION` +
 *Example*: `dislike c/International t/Spicy l/The Deck l/The Terrace`
 ****
 
@@ -316,7 +316,7 @@ Users can provide multiple categories, tags and/or locations with each command.
 
 [WARNING]
 To remove all likes or dislikes, use the command without providing any arguments.
-Only use the command if you are sure that you want to clear your likes and dislikes!
+Only use this command if you are sure that you want to clear your likes and dislikes!
 
 *To remove likes*:
 
