--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -1,6 +1,7 @@
 = VISIT - User Guide
 :site-section: UserGuide
 :toc:
+:toclevels: 3
 :toc-title:
 :toc-placement: preamble
 :sectnums:
@@ -46,58 +47,75 @@ e.g. typing *`help`* and pressing kbd:[Enter] will open the help window.
 ====
 *Command Format*
 
-* Words in `UPPER_CASE` are the parameters to be supplied by the user e.g. in `add n/NAME`, `NAME` is a parameter which can be used as `add n/John Doe`.
-* Items in square brackets are optional e.g `n/NAME [t/TAG]` can be used as `n/John Doe t/cough` or as `n/John Doe`.
-* Items with `…`​ after them can be used multiple times including zero times e.g. `[t/TAG]...` can be used as `{nbsp}` (i.e. 0 times), `t/cancer`, `t/pneumonia t/h1n1` etc.
-* Parameters can be in any order e.g. if the command specifies `n/NAME p/PHONE_NUMBER`, `p/PHONE_NUMBER n/NAME` is also acceptable.
+* All commands listed are *case-insensitive*.
+* Words in `UPPER_CASE` represent the parameters to be specified. +
+e.g. in `add n/NAME`, `NAME` is a parameter which can be used as `add n/John Doe`.
+* Items in square brackets are *optional*. +
+e.g `n/NAME [t/TAG]` can be used as `n/John Doe t/cough` or as `n/John Doe`.
+* Items with `…`​ after them can be used optionally or multiple times. +
+e.g. `[t/TAG]...` can be used as `{nbsp}` (i.e. 0 times), `t/cancer`, `t/pneumonia t/h1n1` etc.
+* Parameters can be in any order if suffixes like "n/" or "p/" are specified. +
+e.g. if the command specifies `n/NAME p/PHONE_NUMBER`, `p/PHONE_NUMBER n/NAME` is also acceptable.
 ====
 
-=== Viewing help : `help`
+=== *Application Commands*
+
+
+==== Viewing help : `help`
 
 Shows a list of available user commands. +
 Format: `help`
 
-=== Adding a person: `add`
+==== Exiting the program : `exit`
 
-Adds a person to VISIT's address book. +
+Exits the program. +
+Format: `exit`
+
+
+=== *Viewing and Managing Patients*
+VISIT can store all the patient information for doctors to have them easily accessible. The following commands enable doctors to be able to add patients and their relevant particulars to be tracked by VISIT, and also view a list of patients that have been entered.
+
+==== Listing all patients : `list`
+
+Shows a list of all patients in the address book. +
+Format: `list`
+
+==== Adding a patient : `add`
+
+Adds a patient to VISIT's address book. +
 Format: `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS [t/TAG]...`
 
 [TIP]
-A person can have any number of tags (including 0)
+A patient can have any number of tags (including 0)
 
-Examples:
+*Examples*:
 
 * `add n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01`
 * `add n/Betsy Crowe t/cold e/betsycrowe@example.com a/Changi Hospital p/1234567 t/pneumonia`
 
-=== Listing all persons : `list`
+==== Editing a patient's particulars : `edit`
 
-Shows a list of all persons in the address book. +
-Format: `list`
-
-=== Editing a person : `edit`
-
-Edits an existing person in the address book. +
+Edits an existing patient in the address book. +
 Format: `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [t/TAG]...`
 
 ****
-* Edits the person at the specified `INDEX`. The index refers to the index number shown in the displayed person list. The index *must be a positive integer* 1, 2, 3, ...
+* Edits the patient at the specified `INDEX`. The index refers to the index number shown in the displayed patient list. The index *must be a positive integer* 1, 2, 3, ...
 * At least one of the optional fields must be provided.
 * Existing values will be updated to the input values.
-* When editing tags, the existing tags of the person will be removed i.e adding of tags is not cumulative.
-* You can remove all the person's tags by typing `t/` without specifying any tags after it.
+* When editing tags, the existing tags of the patient will be removed i.e adding of tags is not cumulative.
+* You can remove all the patient's tags by typing `t/` without specifying any tags after it.
 ****
 
-Examples:
+*Examples*:
 
 * `edit 1 p/91234567 e/johndoe@example.com` +
-Edits the phone number and email address of the 1st person to be `91234567` and `johndoe@example.com` respectively.
+Edits the phone number and email address of the 1st patient to be `91234567` and `johndoe@example.com` respectively.
 * `edit 2 n/Betsy Crower t/` +
-Edits the name of the 2nd person to be `Betsy Crower` and clears all existing tags.
+Edits the name of the 2nd patient to be `Betsy Crower` and clears all existing tags.
 
-=== Locating persons by name: `find`
+==== Locating patient by name : `find`
 
-Finds persons whose names contain any of the given keywords. +
+Finds patients whose names contain any of the given keywords. +
 Format: `find KEYWORD [MORE_KEYWORDS]`
 
 ****
@@ -105,71 +123,51 @@ Format: `find KEYWORD [MORE_KEYWORDS]`
 * The order of the keywords does not matter. e.g. `Hans Bo` will match `Bo Hans`
 * Only the name is searched.
 * Only full words will be matched e.g. `Han` will not match `Hans`
-* Persons matching at least one keyword will be returned (i.e. `OR` search). e.g. `Hans Bo` will return `Hans Gruber`, `Bo Yang`
+* Patients matching at least one keyword will be returned (i.e. `OR` search). e.g. `Hans Bo` will return `Hans Gruber`, `Bo Yang`
 ****
 
-Examples:
+*Examples*:
 
 * `find John` +
 Returns `john` and `John Doe`
 * `find Betsy Tim John` +
-Returns any person having names `Betsy`, `Tim`, or `John`
+Returns any patient having names `Betsy`, `Tim`, or `John`
 
 // tag::delete[]
-=== Deleting a person : `delete`
+==== Deleting a patient : `delete`
 
-Deletes the specified person from the address book. +
+Deletes the specified patient from the address book. +
 Format: `delete INDEX`
 
 ****
-* Deletes the person at the specified `INDEX`.
-* The index refers to the index number shown in the displayed person list.
+* Deletes the patient at the specified `INDEX`.
+* The index refers to the index number shown in the displayed patient list.
 * The index *must be a positive integer* 1, 2, 3, ...
 ****
 
-Examples:
+*Examples*:
 
 * `list` +
 `delete 2` +
-Deletes the 2nd person in the address book.
+Deletes the 2nd patient in the address book.
 * `find Betsy` +
 `delete 1` +
-Deletes the 1st person in the results of the `find` command.
+Deletes the 1st patient in the results of the `find` command.
 
 // end::delete[]
-=== Clearing all entries : `clear`
+==== Clearing all patient data : `clear`
 
 Clears all entries from the address book. +
 Format: `clear`
 
-=== Setting shorthand commands: `alias`
+[TIP]
+Be careful when entering this, as this will erase all patient data from VISIT!
 
-Set an alias for a command to do shorthand. +
-Format: `alias [SHORTHAND] [COMMAND]`
 
-Examples:
+=== *Viewing and Managing Visits*
+VISIT enables doctors to also track the visitations for each patient, allowing the specification of diagnosis, medications prescribed as well as other general comments per visit.
 
-* `alias ls list` +
-Typing `ls` now works equivalently as `list`.
-* `alias "show all persons" list` +
-Typing `show all persons` now works equivalently as `list`.
-
-=== Deleting shorthand commands: `deletealias`
-
-Delete a existing alias. +
-Format: `deletealias [SHORTHAND]`
-
-Examples:
-
-* `deletealias ls` +
-Typing `ls` is no longer equivalent to `list`.
-
-=== Clearing all entries : `clear`
-
-Clears all entries from the address book. +
-Format: `clear`
-
-=== Viewing Full Profile : `profile`
+==== Viewing Full Profile : `profile`
 
 Opens up a new pop-out panel showing the specified patient’s details (Name, Phone, Email, Address, Tags, Visitation reports). The panel can then be closed by pressing q to quit, or p to generate a text file of the profile. +
 Format: `profile INDEX`
@@ -181,52 +179,63 @@ Format: `profile INDEX`
 * The generated text file will overwrite the older text file if it exists.
 ****
 
-Examples:
+*Examples*:
 
 * `profile 2` +
 Opens up a pop-up panel detailing the profile of the patient with the index of 2.
 
-=== Adding a new visitation report: `addVisit`
+==== Adding a new visitation report for a patient : `addVisit`
+Opens a pop-up panel that enables the specification of a new visitation record for a particular patient. +
+Format: `addVisit INDEX [v/DATE]`
 
-Adds a visitation report. +
-Format: `addvisit [n/NAME] [d/DATE] [p/PHONE_NUMBER] [e/EMAIL] [a/ADDRESS] [t/TAG]...`
+* Date must be in the "dd/MM/yyyy" format (i.e. `v/19/10/2019`)
 
-Examples:
+[TIP]
+If no date is specified, `addVisit` will default to the current local date of the computer.
 
-* `addVisit n/Betsy Crowe t/12/12/12 e/Betsy@example.com` +
-Adds new report for the patient `Betsy Crower` on 12/12/12 with email detail prefilled.
+*Examples*:
 
-* `addVisit n/Betsy Crower t/12/12/12 p/91234567  e/Betsy@example.com t/Cancer` +
-Adds new report for the patient `Betsy Crower` on 12/12/12 with email/hp info prefilled and tagged cancer.
+* `addVisit 1` +
+Adds new visitation report for the patient at index 1, defaulting to the current date on the computer. A new panel allowing the specifications of the visitation to be entered.
 
-=== Editing a visitation record : `editVisit`
+* `addVisit 1 v/19/10/2019` +
+Adds new visitation report dated 19th of October 2019, will be added for the patient at index 1. A new panel allowing the specifications of the visitation to be entered.
 
-Edits an existing visitation record in the address book. +
-Format: `editVisit [n/NAME] [d/date] [f/FIELDTOEDIT]...`
+==== Editing the particulars of a Visit : `editVisit`
 
-Examples:
+Opens a pop-up panel that enables the editing of an existing visitation record of a particular patient. +
+Format: `editVisit INDEX [i/REPORT INDEX]`
 
-* `editVisit n/Betsy Crower t/12/12/12 p/prescription` +
-Edits the prescription of the `Betsy Crower` visitation report on 12/12/12.
-* `editVisit n/Betsy Crower t/12/12/12 d/DIAGNOSIS` +
-Edits the diagnosis of the `Betsy Crower` visitation report on 12/12/12.
+[TIP]
+If no report index is specified, `editVisit INDEX` will open a panel showing the reports of that patient and the relevant indexes of the reports. To edit the visit, simply re-enter the command with the desired report index.
 
-// tag::delete[]
-=== Deleting a visitation record : `deleteVisit`
+*Examples*:
+
+* `editVisit 1` +
+A panel will appear showing the list of visits for the patient at index 1 along with the relevant report indexes.
+* `editVisit 1 i/1` +
+A panel will appear to allow for the amendment of the 1st visitation report of the person at index 1.
+
+==== Deleting a visitation record : `deleteVisit`
 
 Deletes the specified visitation record. +
-Format: `deleteVisit [n/NAME] [d/DATE]`
+Format: `deleteVisit INDEX [d/REPORT INDEX]`
 
-****
-* Deletes the visitation record of person NAME on DATE
-****
+[TIP]
+If no report index is specified, `deleteVisit INDEX` will open a panel showing the reports of that patient and their relevant indexes of the reports. To delete the visit, simply re-enter the command with the desired report index.
 
-Examples:
+*Examples*:
 
-* `deleteVisit n/Betsy d/12/12/12` +
-Deletes the visitation report made for `Betsy` on 12/12/12.
+* `deleteVisit 1` +
+A panel will appear showing the list of visits for the patient at index 1 along with the relevant report indexes.
+* `deleteVisit 1 d/1` +
+The 1st visitation report of the person at index 1 will be deleted.
 
-=== Follow-Up with Person : `followup`
+
+=== *Follow-Ups and Reminders*
+VISIT also enables doctors to keep abreast and up-to-date on any events or deadlines as VISIT can be customized to remind them of any follow-up appointments or other timed reminders.
+
+==== Adding a follow-up reminder with patient : `followup`
 
 Adds a follow-up reminder after a set number of days to be prompted when the program is run. +
 Format: `followup INDEX [d/DAYS]`
@@ -234,12 +243,12 @@ Format: `followup INDEX [d/DAYS]`
 [TIP]
 Creates a follow-up entry on patient with specified index for a set number of days or default 7 days.
 
-Examples:
+*Examples*:
 
 * `followup 9 d/10` +
 Creates a follow-up entry on patient with index 9 for 10 days later.
 
-=== Creating Reminders : `reminder`
+==== Creating a generic reminder : `reminder`
 
 Creates a new reminder to show up when the program is launched. +
 Format: `reminder TEXT [d/DAYS]`
@@ -247,34 +256,56 @@ Format: `reminder TEXT [d/DAYS]`
 [TIP]
 Creates a reminder to be displayed when the program launches for a set number of days or default 7 days.
 
-Examples:
+*Examples*:
 
 * `reminder Two Point Hospital closed d/7` +
 Creates a reminder “Two Point Hospital closed” that will display at launch for the next 7 days.
 
+=== *Optimization for Command-Line Interface (CLI) Users*
+VISIT being an application optimized for doctors who are comfortable with CLI, has support for features such as aliasing for commands to enable command entries which are often used to be stored and used quickly and easily.
 
-=== Exiting the program : `exit`
+==== Setting a shorthand command / alias : `alias`
 
-Exits the program. +
-Format: `exit`
+Set an alias for a command to enable faster command entry for a customized input. +
+Format: `alias l/SHORTHAND v/COMMAND`
 
-=== Saving the data
+*Examples*:
+
+* `alias l/ls v/list` +
+Typing `ls` now works equivalently as typing `list`.
+* `alias l/show all patients v/list` +
+Typing `show all patients` now works equivalently as typing `list`.
+
+==== Deleting a shorthand commands / alias : `deletealias`
+
+Delete an existing alias. +
+Format: `deletealias SHORTHAND`
+
+*Examples*:
+
+* `deletealias ls` +
+Typing `ls` will no longer be equivalent to typing `list`.
+
+=== *Saving the data*
 
 VISIT's address book data are saved in the hard disk automatically after any command that changes the data. +
 There is no need to save manually.
 
-=== Inventory System `[Coming in v2.0]`
+=== *Upcoming Features*
+The following features are intended for a later release of VISIT that will further expand on the managing power doctors will be able to execute using the application.
+
+==== Inventory System `[Coming in v2.0]`
 
 VISIT v2.0 will include an inventory system for doctors to manage and organise their medical stores.
 Doctors will be able to generate the list of medication in their stock and assign them to patients using the app
 , which automatically deducts from that list. +
 Warnings of low stocks are also an intended feature.
 
-=== Printing of Medical Certificates `[Coming in v2.0]`
+==== Printing of Medical Certificates `[Coming in v2.0]`
 
 In v2.0, VISIT will allow doctors to easily print an official Medical Certificate with a single command.
 
-=== Microsoft Azure Integration `[Coming in v2.0]`
+==== Microsoft Azure Integration `[Coming in v2.0]`
 
 Microsoft Azure is a popular Cloud Computing platform that allows for data analysis, remote deployment and user
 authentication resources. We plan to leverage this power in VISIT v2.0 so that doctors may securely access
@@ -283,33 +314,53 @@ VISIT from any location, truly bringing VISIT on-the-go.
 
 == FAQ
 
-*Q*: How do I transfer my data to another Computer? +
-*A*: Install the app in the other computer and overwrite the empty data file it creates with the file that contains the data of your previous Address Book folder.
+*Q*: _How do I transfer my saved patient and visit data to another Computer?_ +
+*A*: Install VISIT in the other computer, run it once, typing  `exit` to exit the application. Next, overwrite the generated `data` folder created with the `data` folder of your previous installation folder for VISIT.
+
+*Q*: _How do I transfer my shorthand command data to another Computer?_ +
+*A*: Install VISIT in the other computer and copy the `preferences.json` file from the previous installation folder for VISIT into the installation folder on the new computer.
 
 == Command Summary
 
-* *Add* : `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS [t/TAG]...` +
-e.g. `add n/James Ho p/22224444 e/jamesho@example.com a/123, Clementi Rd, 1234665 t/friend t/colleague`
-* *Add Visit* : `addvisit [n/NAME] [d/DATE] [p/PHONE_NUMBER] [e/EMAIL] [a/ADDRESS] [t/TAG]...` +
-e.g. `addVisit n/Betsy Crowe t/12/12/12 e/Betsy@example.com`
-* *Add a Follow-Up* : `followup INDEX [d/DAYS]` +
+=== *Application Commands*
+
+* *Viewing help* : `help`
+* *Exiting the program* : `exit`
+
+=== *Viewing and Managing Patients*
+
+* *Listing all patients* : `list`
+* *Adding a patient* : `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS [t/TAG]…​` +
+e.g. `add n/Betsy Crowe t/cold e/betsycrowe@example.com a/Changi Hospital p/1234567 t/pneumonia`
+* *Editing a patient’s particulars* : `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [t/TAG]…` +
+e.g. `edit 2 n/Betsy Crower t/`
+* *Locating patient by name* : `find KEYWORD [MORE_KEYWORDS]` +
+e.g. `find Betsy Tim John`
+* *Deleting a patient* : `delete INDEX` +
+e.g. `delete 2`
+* *Clearing all patient data* : `clear`
+
+=== *Viewing and Managing Visits*
+
+* *Viewing Full Profile* : `profile INDEX` +
+e.g. `profile 1`
+* *Adding a new visitation report for a patient* : `addVisit INDEX [v/DATE]` +
+e.g. `addVisit 1 v/19/10/2019`
+* *Editing the particulars of a Visit* : `editVisit INDEX [i/REPORT INDEX]` +
+e.g. `editVisit 1 i/1`
+* *Deleting a visitation record* : `deleteVisit INDEX [d/REPORT INDEX]` +
+e.g. `deleteVisit 1 d/1`
+
+=== *Follow-Ups and Reminders*
+
+* *Adding a follow-up reminder with patient* : `followup INDEX [d/DAYS]` +
 e.g. `followup 9 d/10`
-* *Add a Reminder* : `reminder TEXT [d/DAYS]` +
+* *Creating a generic reminder* : `reminder TEXT [d/DAYS]` +
 e.g. `reminder Two Point Hospital closed d/7`
-* *Clear* : `clear`
-* *Delete* : `delete INDEX` +
-e.g. `delete 3`
-* *Delete Visit* : `deleteVisit [n/NAME] [d/DATE]` +
-e.g. `deleteVisit n/Betsy d/12/12/12`
-* *Edit* : `edit INDEX [n/NAME] [p/PHONE_NUMBER] [e/EMAIL] [a/ADDRESS] [t/TAG]...` +
-e.g. `edit 2 n/James Lee e/jameslee@example.com`
-* *Edit Visit* : `editVisit [n/NAME] [d/date] [f/FIELDTOEDIT]...` +
-e.g. `editVisit n/Betsy Crower t/12/12/12 p/prescription`
-* *Find* : `find KEYWORD [MORE_KEYWORDS]` +
-e.g. `find James Jake`
-* *View a Patient Profile* : `profile INDEX` +
-e.g. `profile 2`
-* *Shorthand Commands* : `alias [SHORTHAND] [COMMAND]` +
-e.g. `alias ls list`, `alias "show all persons" list`
-* *List* : `list`
-* *Help* : `help`
+
+=== *Optimization for Command-Line Interface (CLI) Users*
+
+* *Setting a shorthand command / alias* : `alias l/SHORTHAND v/COMMAND` +
+e.g. `alias l/show all patients v/list`
+* *Deleting a shorthand commands / alias* : `deletealias SHORTHAND` +
+e.g. `deletealias show all patients`
