--- a/docs/Testing.adoc
+++ b/docs/Testing.adoc
@@ -1,4 +1,4 @@
-= AddressBook Level 3 - Testing
+= Budget Buddy - Testing
 :site-section: DeveloperGuide
 :toc:
 :toc-title:
@@ -12,7 +12,7 @@ ifdef::env-github[]
 :note-caption: :information_source:
 :warning-caption: :warning:
 endif::[]
-:repoURL: https://github.com/se-edu/addressbook-level3/tree/master
+:repoURL: https://github.com/AY1920S1-CS2103T-W13-4/main
 
 == Running Tests
 
